--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--CUSTOM CSS-->
-    <link rel="stylesheet" href="/src/public/css/main.css">
+    <link rel="stylesheet" href="../public/css/main.css">
     <title>Vuelos, Actividades y Hospedajes || PLANEANDO!</title>
     <!--BOOTSTRAP 5.2-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -24,7 +24,7 @@
 
 <body>
     <main class="pantallaIngreso">
-        <a class="btnAtras" aria-current="page" href="/"><i class="fa-solid fa-circle-chevron-left"></i></a>
+        <a class="btnAtras" aria-current="page" href="/AplicandoGrids/index.html"><i class="fa-solid fa-circle-chevron-left"></i></a>
         <div class="modalFormSignUp">
             <div class="bienvenidoDeNuevo">
                 <div class="mensaje">
@@ -83,7 +83,7 @@
             </div>
         </div>
     </main>
-    <script src="/src/public/js/main.js"></script>
+    <script src="../public/js/main.js"></script>
 </body>
 
 </html>
