--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
                         <button id="btnBancos">VER TODOS LOS BANCOS</button>
                         <ul>
                             <div class="listBank">
-                                <li><img src="/src/public/img/BBVA-logo.png" alt="banco"></li>
-                                <li><img src="/src/public/img/bancoNacion-logo.png" alt="banco"></li>
-                                <li><img src="/src/public/img/supervielle-logo.png" alt="banco"></li>
-                                <li><img src="/src/public/img/santander-logo.png" alt="banco"></li>
-                                <li><img src="/src/public/img/comafi-logo.png" alt="banco"></li>
+                                <li><img src="./src/public/img/BBVA-logo.png" alt="banco"></li>
+                                <li><img src="./src/public/img/bancoNacion-logo.png" alt="banco"></li>
+                                <li><img src="./src/public/img/supervielle-logo.png" alt="banco"></li>
+                                <li><img src="./src/public/img/santander-logo.png" alt="banco"></li>
+                                <li><img src="./src/public/img/comafi-logo.png" alt="banco"></li>
                             </div>
                         </ul>
                     </div>
