--- a/src/pages/vuelos.html
+++ b/src/pages/vuelos.html
@@ -323,11 +323,11 @@
                         <button id="btnBancos">VER TODOS LOS BANCOS</button>
                         <ul>
                             <div class="listBank">
-                                <li><img src="/src/public/img/BBVA-logo.png" alt="banco"></li>
-                                <li><img src="/src/public/img/bancoNacion-logo.png" alt="banco"></li>
-                                <li><img src="/src/public/img/supervielle-logo.png" alt="banco"></li>
-                                <li><img src="/src/public/img/santander-logo.png" alt="banco"></li>
-                                <li><img src="/src/public/img/comafi-logo.png" alt="banco"></li>
+                                <li><img src="../public/img/BBVA-logo.png" alt="banco"></li>
+                                <li><img src="../public/img/bancoNacion-logo.png" alt="banco"></li>
+                                <li><img src="../public/img/supervielle-logo.png" alt="banco"></li>
+                                <li><img src="../public/img/santander-logo.png" alt="banco"></li>
+                                <li><img src="../public/img/comafi-logo.png" alt="banco"></li>
                             </div>
                         </ul>
                     </div>
