--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -24,7 +24,7 @@
 
 <body>
     <main class="pantallaIngreso">
-        <a class="btnAtras" aria-current="page" href="/AplicandoGrids/index.html"><i class="fa-solid fa-circle-chevron-left"></i></a>
+        <a class="btnAtras" aria-current="page" href="/index.html"><i class="fa-solid fa-circle-chevron-left"></i></a>
         <div class="modalFormSignUp">
             <div class="bienvenidoDeNuevo">
                 <div class="mensaje">
