--- a/src/pages/vuelos.html
+++ b/src/pages/vuelos.html
@@ -34,7 +34,7 @@
                     <div class="collapse navbar-collapse " id="navbarNav">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/AplicandoGrids/index.html"><i class="fas fa-home"></i> Inicio</a>
+                                <a class="nav-link active" aria-current="page" href="/index.html"><i class="fas fa-home"></i> Inicio</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" href="./vuelos.html"><i class="fas fa-plane"></i> Vuelos</a>
