--- a/src/pages/vuelos.html
+++ b/src/pages/vuelos.html
@@ -142,7 +142,7 @@
 
 
         <section class="volaArg">
-            <h2>Volá por Argentina, animate!</h2><br><br>
+            <h2>Volá por Argentina, animate!</h2>
             <div class="container">
                 <div class="cartas">
                     <div class="carta" id="carta1">
