--- a/src/pages/vuelos.html
+++ b/src/pages/vuelos.html
@@ -140,7 +140,6 @@
             </div>
         </section>
 
-
         <section class="volaArg">
             <h2>Volá por Argentina, animate!</h2>
             <div class="container">
@@ -156,7 +155,7 @@
                         <span>Buenos Aires</span>
                         <hr>
                         <p>Precio</p>
-                        <b>$ 15.650</b>
+                        <span>$ 15.650</span>
                     </div>
                     <div class="carta" id="carta2">
                         <div class="containerImagen2">
@@ -169,7 +168,7 @@
                         <span>Buenos Aires</span>
                         <hr>
                         <p>Precio</p>
-                        <b>$ 22.350</b>
+                        <span>$ 22.350</span>
                     </div>
                     <div class="carta" id="carta3">
                         <div class="containerImagen3">
@@ -182,7 +181,7 @@
                         <span>Buenos Aires</span>
                         <hr>
                         <p>Precio</p>
-                        <b>$ 17.860</b>
+                        <span>$ 17.860</span>
                     </div>
                     <div class="carta" id="carta4">
                         <div class="containerImagen4">
@@ -195,7 +194,7 @@
                         <span>Buenos Aires</span>
                         <hr>
                         <p>Precio</p>
-                        <b>$ 23.350</b>
+                        <span>$ 23.350</span>
                     </div>
                     <div class="carta" id="carta5">
                         <div class="containerImagen5">
@@ -208,7 +207,7 @@
                         <span>Buenos Aires</span>
                         <hr>
                         <p>Precio</p>
-                        <b>$ 12.550</b>
+                        <span>$ 12.550</span>
                     </div>
                     <div class="carta" id="carta6">
                         <div class="containerImagen6">
@@ -221,7 +220,7 @@
                         <span>Buenos Aires</span>
                         <hr>
                         <p>Precio</p>
-                        <b>$ 18.990</b>
+                        <span>$ 18.990</span>
                     </div>
                 </div>
             </div>
@@ -243,7 +242,7 @@
                         <span>Buenos Aires</span>
                         <hr>
                         <p>Precio</p>
-                        <b>$ 45.550</b>
+                        <span>$ 45.550</span>
                     </div>
                     <div class="carta" id="carta8">
                         <div class="containerImagen8">
@@ -256,7 +255,7 @@
                         <span>Buenos Aires</span>
                         <hr>
                         <p>Precio</p>
-                        <b>$ 185.455</b>
+                        <span>$ 185.455</span>
                     </div>
                     <div class="carta" id="carta9">
                         <div class="containerImagen9">
@@ -269,7 +268,7 @@
                         <span>Buenos Aires</span>
                         <hr>
                         <p>Precio</p>
-                        <b>$ 48.880</b>
+                        <span>$ 48.880</span>
                     </div>
                     <div class="carta" id="carta10">
                         <div class="containerImagen10">
@@ -282,7 +281,7 @@
                         <span>Buenos Aires</span>
                         <hr>
                         <p>Precio</p>
-                        <b>$ 250.380</b>
+                        <span>$ 250.380</span>
                     </div>
                     <div class="carta" id="carta11">
                         <div class="containerImagen11">
@@ -295,7 +294,7 @@
                         <span>Buenos Aires</span>
                         <hr>
                         <p>Precio</p>
-                        <b>$ 90.780</b>
+                        <span>$ 90.780</span>
                     </div>
                     <div class="carta" id="carta12">
                         <div class="containerImagen12">
@@ -308,7 +307,7 @@
                         <span>Buenos Aires</span>
                         <hr>
                         <p>Precio</p>
-                        <b>$ 350.980</b>
+                        <span>$ 350.980</span>
                     </div>
                 </div>
             </div>
